pyfll (2014.03.08.1) UNRELEASED; urgency=medium

  * cups-pk-helper added to gnome packages for enable printing
  * added libpam-gnome-keyring for gnome remote login

 -- Angelescu Ovidiu <convbsd@siduction.org>  Sat, 08 Mar 2014 11:14:07 +0200

pyfll (2014.03.08) UNRELEASED; urgency=medium

  * kdenetwork-filesharing added to kde packages

 -- Alf Gaida <agaida@siduction.org>  Sat, 08 Mar 2014 00:41:07 +0100

pyfll (2014.03.07) unstable; urgency=medium

  * first attempt for lxqt package list 
  * added qterminal  

 -- Alf Gaida <agaida@siduction.org>  Fri, 07 Mar 2014 01:47:36 +0100

pyfll (2014.03.06) unstable; urgency=medium

  * lxqt amd64 added
  * lxqt i386 added

 -- Alf Gaida <agaida@siduction.org>  Fri, 07 Mar 2014 01:47:29 +0100

pyfll (2014.03.03) unstable; urgency=medium

  * nox: python-owncloud commented out, broken

 -- Alf Gaida <agaida@siduction.org>  Thu, 06 Mar 2014 00:44:11 +0100

pyfll (2014.02.23) unstable; urgency=medium

  * whiteroom lxde switched to lightdm 
  * paintitblack lxde switched to lightdm
  * thunderstruck lxde switched to lightdm

 -- Alf Gaida <agaida@siduction.org>  Wed, 22 Jan 2014 20:21:37 +0100

pyfll (2014.01.17) unstable; urgency=medium

  * copyright 

 -- Alf Gaida <agaida@siduction.org>  Fri, 17 Jan 2014 18:56:59 +0100

pyfll (2014.01.16) unstable; urgency=medium

  * siduction-settings-lighdm-kde  in kde/next
  * siduction-settings-lightdm-gtk in xorg/next

 -- Alf Gaida <agaida@siduction.org>  Thu, 16 Jan 2014 02:21:01 +0100

pyfll (2014.01.14) unstable; urgency=medium

  * cleanup 200-siduction-cli
    - siduction-bootstrap removed - not needed
    - fll-installer remove - is a dependency of cli-installer and
      sidu-installer

 -- Alf Gaida <agaida@siduction.org>  Tue, 14 Jan 2014 23:15:35 +0100

pyfll (2014.01.10) unstable; urgency=medium

  * delete some unused lines in 999-finalize.postinst
  * leave the 000-essentials.postinst as is, as it don't collide 
    with systemd updates 