@@ -28,7 +28,7 @@ lang = """
 
 packages = """
     gfxboot-themes-siduction-@CODENAME_SAFE@-lxqt
-    siduction-art-wallpaper-@CODENAME_SAFE@
+    siduction-art-lxqt-@CODENAME_SAFE@
     siduction-live-settings-lxqt-@CODENAME_SAFE@
     siduction-settings-lxqt-@CODENAME_SAFE@
     siduction-settings-lightdm-gtk-@CODENAME_SAFE@
